--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,5 +63,15 @@ android {
 flutter {
     source '../..'
 }
+plugins {
+  id("com.android.application")
 
-dependencies {}
+
+  id("com.google.gms.google-services")
+
+ 
+  }
+
+dependencies {
+    implementation ( platform ( "com.google.firebase:firebase-bom:32.3.1" ))
+}
