--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,14 +63,12 @@ android {
 flutter {
     source '../..'
 }
-plugins {
-  id("com.android.application")
 
-
-  id("com.google.gms.google-services")
+apply plugin: "com.android.application"
+apply plugin:  "com.google.gms.google-services"
 
  
-  }
+  
 
 dependencies {
     implementation ( platform ( "com.google.firebase:firebase-bom:32.3.1" ))
