--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,11 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
-  http: ^1.1.0
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
+  firebase_database: ^10.2.5
+  
 
 dev_dependencies:
   flutter_test:
