--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,7 +31,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+defaultConfig {
+   
+    multiDexEnabled true
+}
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -72,4 +75,5 @@ apply plugin:  "com.google.gms.google-services"
 
 dependencies {
     implementation ( platform ( "com.google.firebase:firebase-bom:32.3.1" ))
+    implementation 'com.android.support:multidex:1.0.3'
 }
